Fixed horizontal scrollbar problem

--- a/client/css/navbar.css
+++ b/client/css/navbar.css
@@ -3,6 +3,6 @@
 }
 
 .navbar-header {
-    margin-right:5px;
-    width:100%;
+    /*margin-right:5px;*/
+    width:99%;
 }
